# Apora-Dict2Anki

./: .gitignore  FixQtEnums.py  Makefile  Makefile.bat  README.md  __init__.py  config.json  deploy.py  manifest.json  pyproject.toml  setup.py
.github/workflows/: release.yml
addon/: addonWindow.py  constants.py  constants_tests.py  deprecated.py  exceptions.py  logger.py  loginDialog.py  misc.py  noteManager.py  utils.py  workers.py
addon/UIForm/: icons_rc.py  icons_rc.qrc  loginDialog.py  mainUI.py  mainUI.ui  wordGroup.py
addon/dictionary/: README.md  __init__.py  base.py  eudict.py  youdao.py
addon/queryApi/: README.md  __init__.py  apora.py  base.py  eudict.py  utils.py  youdao.py
test/: README.md  dummy_noteManager.py  test_main.py  test_queryapi.py
test/dummy_anki/: dummy_notes.py
test/dummy_aqt/: dummy_addon.py
