[project]
name = "apora-dict2anki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anki>=25.9.2",
    "aqt>=25.9.2",
    "beautifulsoup4>=4.14.2",
    "mypy>=1.18.2",
    "protobuf>=6.33.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "pytest-qt>=4.5.0",
    "requests>=2.32.5",
    "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
    "pyside6>=6.10.0",
    "ruff>=0.14.1",
]
